--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install commitlint
-        run: npm install
+        run: npm install @commitlint/{cli,config-conventional}
 
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
