--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         run: cargo build
 
       - name: Build tungstenite feature
-        run: cargo build
+        run: cargo build --features tungstenite-ws
 
       - name: Test
         run: cargo test
