--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 authors = ["S. Suprun <hello@syoma.website>"]
 publish = true
 repository = "https://github.com/supadupadao/ton-api-client"
+license = "MIT"
 
 [features]
 tungstenite-ws = ["dep:tokio-tungstenite", "dep:tokio", "dep:futures-util", "ws"]
